# chatbot

./: Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
src/chatbot/: __main__.py
src/chatbot/console/: application.py
src/chatbot/domain/: prompt.py
src/chatbot/models/: openai.py
tests/: conftest.py
tests/console/: test_console_application.py
tests/domain/: test_chatbot_prompt.py
tests/models/: test_openai_model.py
