[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = "Chatbot butler based on the OpenAI model text-moderation-playground"
authors = ["Brock Brumley <brockbrumley95@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"